# easycmd

./: .gitignore  CMakeLists.txt  LICENSE  command.cpp  command.h  option.h
test/: main.cpp
